# pyZeeTom

./: .gitignore  DEBUG_FORWARD_REPORT.md  GEOMODEL_SAVE_REPORT.md  README.md  TESTING.md  debug_spot_generation.py  example_multi_phase_synthesis.py  out_synth.txt  phase_0000_HJD0p000_VRp0p00_V.spec  pyproject.toml  run_tests.py  run_tests.sh  spot_forward_workflow.py  test_spot_simulator_integration.py  tomography.py
.github/: copilot-instructions.md
core/: MEM_README.md  SpecIO.py  disk_geometry_integrator.py  grid_tom.py  local_linemodel_basic.py  mainFuncs.py  memSimple3.py  mem_generic.py  mem_iteration_manager.py  mem_monitoring.py  mem_optimization.py  mem_tomography.py  physical_model.py  readObs.py  spot_geometry.py  tomography_config.py  tomography_forward.py  tomography_inversion.py  tomography_result.py  velspace_DiskIntegrator.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MODEL_IO_GUIDE.md  OCCULTATION_FIX.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  TIME_EVOLUTION.md
examples/: 01_generate_spot_data.py  02_forward_tomography.py  03_inversion_tomography.py  04_visualize_geomodel.py  05_dynamic_spectrum.py  README_examples.md  example_full_workflow.py  example_spot_simulation_integration.py  example_visualize_spot_model.py  inversion_test.py  mem_inversion_example.py  spot_simulation_basic.py  spot_simulator_forward_workflow_example.py  three_spot_simulation.py
input/: intomog_ap149_05Dec06_updated.txt  intomog_ap149_update.txt  lines.txt  lines_test.txt  params_inverse_test.txt  params_spot_forward.txt  params_tomog.txt
tbd/: lines_ME.txt  (+1 more)
(+50 files in other folders)
