[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzeetom"
version = "0.1.0"
description = "Lightweight tools for spectral line/field inversion and tomography"
authors = [{name = "SolomonCang"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "matplotlib>=3.6",
]

[project.scripts]
pyzeetom = "pyzeetom.tomography:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyzeetom*", "core*"]
